Fri Apr 19 16:06:39 BST 2002  Olly Betts <olly@survex.com>

	* Fixed some compilation problems which I somehow failed to notice
	  before the last check-in.

Fri Apr 19 15:04:13 BST 2002  Olly Betts <olly@survex.com>

	* Added more RETURN(...) wrappers.

Fri Apr 19 14:46:19 BST 2002  Olly Betts <olly@survex.com>

	* Added more DEBUGCALL tracing to quartz.

Fri Apr 19 13:29:57 BST 2002  Olly Betts <olly@survex.com>

	* Minor tweaks to quartz_database.cc.

Fri Apr 19 13:07:50 BST 2002  Olly Betts <olly@survex.com>

	* Moved test poslist1 into correct place and renamed it to poslist2
	  since there's already a poslist1... 

Fri Apr 19 11:19:15 BST 2002  Olly Betts <olly@survex.com>

	* poslist1 (when actually run!) reveals that Quartz fails to throw
	  errors in this case.  Disabled test for now, as I can't see why it
	  fails to throw...

Thu Apr 18 17:44:56 BST 2002  Olly Betts <olly@survex.com>

	* Added poslist1 test as suggested by a TODO entry.

Thu Apr 18 14:17:24 BST 2002  Olly Betts <olly@survex.com>

	* buildall: Removed search for GNU make (as of automake
	  1.5 it's not needed for automake and we aim to have portable
	  makefiles).  Made buildall more portable.

Thu Apr 18 14:16:18 BST 2002  Olly Betts <olly@survex.com>

	* xapian-config.nodep is a generated file, so don't look for it in
	  srcdir.

Thu Apr 18 12:45:04 BST 2002  Olly Betts <olly@survex.com>

	* Added bindings/php4/xapian/.cvsignore.

Thu Apr 18 12:36:53 BST 2002  Olly Betts <olly@survex.com>

	* Minor tweaks to "Makefile" section in HACKING.

Thu Apr 18 12:26:21 BST 2002  Olly Betts <olly@survex.com>

	* Yet more Makefile portability fixes; added section to HACKING
	  summarising my recent experiences.

Thu Apr 18 11:26:37 BST 2002  Olly Betts <olly@survex.com>

	* Corrected the sense of the test in the previous check-in.

Thu Apr 18 11:08:04 BST 2002  Olly Betts <olly@survex.com>

	* Use case instead of echo/sed to replace dirname.
